@@ -1977,6 +1977,13 @@
                description="[CUSTOMERS_EMAIL]"
                validate="true"
                required="true"/>
+        <field name="subject"
+               type="text"
+               description="[SUBJECT]"
+               validate="true"
+               required="true"
+               max_length="255"
+               min_length="1"/>
         <field name="invoice"
                type="textarea"
                description="[EMAIL_BODY_INVOICE]"
@@ -3328,6 +3335,13 @@
 
     <form name="settings_invoice" page="settings" method="POST">
       <fields>
+        <field name="subject" 
+               type="text"
+               description="[INVOICE_EMAIL_SUBJECT]"
+               validate="true"
+               required="true"
+               max_length="255"
+               min_length="1"/>
         <field name="text"
                type="textarea"
                description="[INVOICE_TEXT]"
